commit 38d169ec86b69873e8f28c4dde9076514ddf9805
Author: mats cronqvist <masse@klarna.com>
Date:   Tue Feb 25 18:43:26 2014 +0100

    fix release.sh

ChangeLog
release.sh

commit 36dc477f35e83610915b99df09ca402b5d4cbef3
Author: mats cronqvist <masse@klarna.com>
Date:   Tue Feb 25 18:38:46 2014 +0100

    add release.sh script

AUTHORS
ChangeLog
release.sh

commit f1801380812899caa463c3cffaf65369f4361166
Author: Leo Liu <sdl.web@gmail.com>
Date:   Sun Feb 16 12:42:09 2014 +0800

    Rename erl-search-function to erl-search-definition
    and support searching type definitions.

elisp/erl-service.el

commit 01e36d27371241fd9f7f575a023fa6f10caf9ee4
Author: Leo Liu <sdl.web@gmail.com>
Date:   Fri Feb 14 19:21:52 2014 +0800

    Remove mutual require between erl, derl and erl-service
    Fix some buglets and compiler warnings.

Makefile
elisp/derl.el
elisp/epmd.el
elisp/erl-service.el
elisp/erl.el
elisp/net-fsm.el

commit 905696f76b65c965b751be21a46ba2670224cbae
Author: Leo Liu <sdl.web@gmail.com>
Date:   Fri Feb 14 00:22:57 2014 +0800

    Use add-hook for adding buffer-local hook
    Replace edb-line-number with line-number-at-pos.

elisp/edb.el
elisp/erl-test.el
elisp/erl.el

commit b9aafc8c15965e39472a28b069019996995577c7
Author: Leo Liu <sdl.web@gmail.com>
Date:   Tue Feb 18 17:12:17 2014 +0800

    Fix #34: Remove current-prefix-arg from erl-target-node

elisp/erl-service.el

commit 5b6a75bc9eb21e85e88fbcad926e5cf55b1f84ae
Author: Leo Liu <sdl.web@gmail.com>
Date:   Fri Feb 14 00:22:04 2014 +0800

    Also export attach_loop/1 from distel.erl

src/distel.erl

commit 9d848ff865ef10957882d11d56c741158a2dc2e5
Author: Leo Liu <sdl.web@gmail.com>
Date:   Sun Feb 9 13:01:33 2014 +0800

    Replace -compile(export_all). with proper API exports
    Cosmetic changes to -import(...). to avoid confusing indentation
    engine.

src/distel.erl

commit 5b208fae7854b8f380a86d374701ba5dcfe20da2
Author: Leo Liu <sdl.web@gmail.com>
Date:   Mon Jan 27 15:03:31 2014 +0800
