@@ -1,4 +1,5 @@
  amongst others:
+ mats cronqvist <masse@cronqvi.st>
  Martin Bjorklund <mbj <at> tail-f.com>
  david wallin <david.wallin@ul.ie>
  Benjamin Nortier <bjnortier@gmail.com>
@@ -10,6 +11,3 @@
  Luke Gorrie <luke@bup.co.nz>
  Magnus Henoch <magnus.henoch@gmail.com>
  Richard Carlsson <richardc@klarna.com>
- mats cronqvist <masse@cronqvi.st>
- mats cronqvist <masse@klarna.com>
- mats cronqvist <mats.cronqvist@gmail.com>
