@@ -28,9 +28,11 @@ fi
 echo $OVSN"->"$NVSN
 git commit -m"v$NVSN"
 git log --name-only --no-merges | grep -Ev '^[ ]+$$|git-svn-id' > ChangeLog
-echo " Mats Cronqvist <masse@cronqvi.st>" > AUTHORS
-git log | grep Author | grep -Evi "vagrant|no author|mats cronqvist" \
-  | sort -u | cut -c8- >> AUTHORS
+echo " amongst others:" > AUTHORS
+echo " mats cronqvist <masse@cronqvi.st>" >> AUTHORS
+echo " Martin Bjorklund <mbj <at> tail-f.com>" >> AUTHORS
+echo " david wallin <david.wallin@ul.ie>" >> AUTHORS
+git log | grep Author | grep -Evi "vagrant|no author|ronqvist" | sort -u | cut -c8- >> AUTHORS
 git add ChangeLog AUTHORS
 git commit --amend --reuse-message HEAD
 git tag -a -m"$NVSN" $NVSN
